<resources>
    <string name="app_name">Kontak</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="id">ID</string>
    <string name="name">Nama</string>
    <string name="alasan">Alasan</string>
    <string name="alamat">Alamat</string>
    <string name="nohp">Hp</string>
    <string name="photo">Photo</string>
    <string name="register">Daftar</string>
    <string name="view">Lihat Data</string>
    <string name="tambah">Tambah</string>
    <string name="update">Ubah</string>
    <string name="delete">Hapus</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_logout">Log Out</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_personal_data">MainPersonalDataActivity</string>
</resources>
